messages coding and function

--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.2"
-  },
+  
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
   }
 }
+
+
+// "devDependencies": 
+  //   "nodemon": "^2.0.2"
+  
